--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ botocore>=1.34.0
 
 # Frontend
 streamlit>=1.31.0
-# streamlit-audio-recorder>=0.0.8  # Will be added when implementing UI
+streamlit-audio-recorder>=0.0.8
 
 # Image Processing
 pillow>=10.2.0
