code cleaned and initial code generation done

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,32 @@
-# AWS Credentials
+# AWS Configuration
+AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
-AWS_DEFAULT_REGION=us-east-1
 
-# AWS Service Configuration
-AWS_BEDROCK_MODEL_ID=anthropic.claude-3-5-sonnet-20241022-v2:0
-AWS_S3_BUCKET=missionai-farmer-uploads
-
-# Amazon Transcribe Configuration
-AWS_TRANSCRIBE_LANGUAGE_CODES=en-IN,hi-IN,kn-IN
-
-# Amazon Polly Configuration
-AWS_POLLY_VOICE_ID_ENGLISH=Aditi
-AWS_POLLY_VOICE_ID_HINDI=Aditi
-AWS_POLLY_VOICE_ID_KANNADA=Aditi
+# Amazon Bedrock Configuration
+BEDROCK_MODEL_ID=anthropic.claude-3-sonnet-20240229-v1:0
+BEDROCK_REGION=us-east-1
 
 # Application Configuration
+APP_NAME=RISE
 APP_ENV=development
 DEBUG=True
-LOG_LEVEL=INFO
 
-# Session Configuration
-SESSION_TIMEOUT_MINUTES=30
-MAX_CONVERSATION_HISTORY=10
+# Streamlit Configuration
+STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_ADDRESS=localhost
 
-# Feature Flags
-ENABLE_OFFLINE_MODE=True
-ENABLE_COMMUNITY_FORUM=True
-ENABLE_VOICE_INPUT=True
+# DynamoDB Tables (will be created)
+DYNAMODB_USER_PROFILES_TABLE=RISE-UserProfiles
+DYNAMODB_FARM_DATA_TABLE=RISE-FarmData
+DYNAMODB_DIAGNOSIS_HISTORY_TABLE=RISE-DiagnosisHistory
+DYNAMODB_RESOURCE_SHARING_TABLE=RISE-ResourceSharing
+DYNAMODB_BUYING_GROUPS_TABLE=RISE-BuyingGroups
+DYNAMODB_RESOURCE_BOOKINGS_TABLE=RISE-ResourceBookings
 
-# Mock Data (for development/testing)
-USE_MOCK_WEATHER_API=True
-USE_MOCK_MARKET_API=True
-MOCK_DATA_PATH=./data
+# S3 Buckets (will be created)
+S3_BUCKET_NAME=rise-application-data
+
+# OpenTelemetry Configuration
+OTEL_SERVICE_NAME=rise-farming-assistant
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
